# RMC-14

Content.Client/Entry/: EntryPoint.cs
Content.Client/_RMC14/NightVision/: NightVisionOverlay.cs
Content.Client/_RMC14/Overwatch/: OverwatchConsoleBui.cs  OverwatchConsoleSystem.cs  OverwatchConsoleWindow.xaml  OverwatchConsoleWindow.xaml.cs  OverwatchSquadView.xaml  OverwatchSquadView.xaml.cs
Content.Client/_RMC14/TacticalMap/: TacticalMapComputerBui.cs  TacticalMapControl.xaml.cs  TacticalMapUserBui.cs  TacticalMapWindow.xaml.cs  TacticalMapWrapper.xaml  TacticalMapWrapper.xaml.cs
Content.MapRenderer/: CommandLineArguments.cs  Program.cs  TacticalMapExportModels.cs  TacticalMapExporter.cs
Content.MapRenderer/Painters/: EntityPainter.cs  MapPainter.cs
Content.Replay/: EntryPoint.cs  Program.cs
Content.Replay/ChatExport/: ReplayChatExportOptions.cs
Content.Server/_RMC14/Dropship/: DropshipSystem.cs
Content.Server/_RMC14/TacticalMap/: TacticalMapSystem.cs
Content.Shared/_RMC14/Atmos/: SharedRMCFlammableSystem.cs
Content.Shared/_RMC14/CCVar/: RMCCVars.cs
Content.Shared/_RMC14/Overwatch/: OverwatchConsoleComponent.cs  SharedOverwatchConsoleSystem.cs
Content.Shared/_RMC14/Repairable/: RMCRepairableSystem.cs
Content.Shared/_RMC14/Rules/: RMCPlanetSystem.cs
Resources/Locale/en-US/_RMC14/: overwatch.ftl
Tools/TacticalMapViewer/: README.md  app.css  app.js  index.html
Tools/launcher_cache_extract/: Program.cs  launcher_cache_extract.csproj
Tools/rmc14_chatlogs/: .env.example  pyproject.toml
Tools/rmc14_chatlogs/src/rmc14_chatlogs/: __main__.py
(+20 files in other folders)
