[project]
name = "rmc14-chatlogs"
version = "0.1.0"
description = "Extract normalized chat logs from an RMC14 server database."
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]

[project.scripts]
rmc14-chatlogs = "rmc14_chatlogs.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
